--- a/treestyletab.css
+++ b/treestyletab.css
@@ -27,8 +27,12 @@ tab-item .background {
 tab-item tab-favicon {
 	order: 10 !important;
 	margin-left: 18px;
-	margin-right: 16px;
+	margin-right: 10px;
 	transition: var(--transition-duration) var(--transition-ease);
+}
+
+tab-item.active tab-favicon {
+	margin-right: 16px !important; 
 }
 
 tab-item tab-closebox {
