--- a/userChrome.css
+++ b/userChrome.css
@@ -1,6 +1,6 @@
 :root {
 	--navbar-height: 48px;
-	--wc-height: 16px;
+	--wc-height: 20px;
 	--wc-left-margin: 10px;
 	--wc-red: hsl(-10, 90%, 60%);
 	--wc-yellow: hsl(50, 90%, 60%);
@@ -52,48 +52,30 @@ See the above repository for updates as well as full license text. */
 	z-index: 200 !important;
 }
 
-#private-browsing-indicator-with-label {
-	display: none !important;
-}
-
-.titlebar-button > .toolbarbutton-icon {
-	visibility: hidden;
-}
 
 .titlebar-button {
-	padding: 0 !important;
-	height: var(--wc-height) !important;
-	min-height: var(--wc-height) !important;
-	width: var(--wc-height) !important;
-	min-width: var(--wc-height) !important;
-	border-radius: 50%;
+	margin-top: 5px !important;
+	height: 42px !important;
+	min-height: 42px !important;
+	width: 42px !important;
+	min-width:42px !important;
 	opacity: 0.7 !important;
 }
 
 .titlebar-button:hover {
-	transform: scale(1.1);
 	opacity: 1 !important;
 	cursor: pointer;
 }
 
 .titlebar-buttonbox {
-	display: flex;
-	margin-right: var(--wc-height);
-	gap: var(--wc-height);
+	position: absolute !important;
+	top: 5px !important;
+	right: 0 !important;
+	height: var(--wc-height) !important;
+	display: flex !important;
+	align-items: center !important;
 }
 
-.titlebar-close {
-	background: var(--wc-red) !important;
-}
-
-.titlebar-min {
-	background: var(--wc-yellow) !important;
-}
-
-.titlebar-max,
-.titlebar-restore {
-	background: var(--wc-green) !important;
-}
 
 /* hide sidebar header */
 #sidebar-box[sidebarcommand='treestyletab_piro_sakura_ne_jp-sidebar-action']
